Tue Oct  5 08:28:14 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Extension/Extension_Container.cpp:
        * ciao/Containers/Session/Session_Container.cpp:
          Fixed a few memory leaks

Mon Oct  4 18:15:41 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO-INSTALL.html:
          Minor updates

        * COPYING:
          Small update

        * ciao/Base/Client_init.h:
        * ciao/Containers/Extension/Extension_Container.cpp:
        * ciao/Contexts/Session/Session_Context_T.cpp:
        * ciao/Deployment/Handlers/CIAO_Handler_Common.cpp:
        * ciao/Deployment/Handlers/Homed_Component_Handler.cpp:
        * ciao/Servants/Connector_Servant_Impl_Base.h:
          Layout changes

        * ciao/Servants/Servant_Impl_Base.h:
          Fixed merge problem

Mon Oct  4 14:29:42 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/tests/AMIDDS/Base/AmiDds_Base.mpc:
        Add missing after.

Mon Oct  4 13:42:42 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * ccm/CCM_Events.idl:
        * ccm/CCM_EventConsumerBase.idl:
        * ccm/CCM_Object.idl:
        * ccm/CCM_EventBase.idl:
        * ciao/Deployment/Handlers/Connection_Handler.cpp:
        * ciao/Servants/Servant_Impl_Base.h:
        * ciao/Servants/Connector_Servant_Impl_Base.cpp:
        * ciao/Servants/Connector_Servant_Impl_Base.h:
        * ciao/Servants/Servant_Impl_Base.cpp:
        Step 2 to remove events from ccm if ccm_noevents =1

Mon Oct  4 10:35:42 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Port_Activator.h:
          Fixed typo

Mon Oct  4 07:38:15 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Navigation/Navigation.mpc:
        * tests/CIF/Receptacle/Receptacle.mpc:
          Resolved linking error on static builds.

Mon Oct  4 07:14:18 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * ciao/Containers/Extension/Extension_Container.mpc: