@@ -1,3 +1,12 @@
+Tue Oct  5 08:57:42 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
+
+        *ccm/CCM_Events.idl:
+        * ccm/CCM_Object.idl:
+        * ciao/Servants/Servant_Impl_Utils_T.cpp:
+        * ciao/Servants/Servant_Impl_Base.cpp:
+        * ciao/Base/Client_init.cpp:
+        Add removed Events interface and some ifdefs ccm_noevent 
+
 Tue Oct  5 08:28:14 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/Containers/Extension/Extension_Container.cpp:
